--- a/core/templates/core/lista_servicios.html
+++ b/core/templates/core/lista_servicios.html
@@ -47,7 +47,7 @@
                         </div>
 
                     <div class="mt-2"> <span class="badge bg-light text-dark border">
-                            ⏱️ {{ servicio.duracion }} min
+                            ⏱️ {{ duracion_minutos }} min
                         </span>
                     </div>
 
