--- a/core/templates/core/liquidacion_comisiones.html
+++ b/core/templates/core/liquidacion_comisiones.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="row mb-4">
     <div class="col-12 text-center">
-        <h2 class="mb-3"> <i class="bi bi-cash-stack text-success"></i>  Liquidación de Comisiones</h2>
+        <h2 class="mb-3"> <i class="bi bi-cash-stack"></i>  Liquidación de Comisiones</h2>
     </div>
 </div>
 
