--- a/core/templates/core/lista_citas.html
+++ b/core/templates/core/lista_citas.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="d-flex justify-content-between align-items-center mb-4">
-    <h2><i class="bi bi-calendar-month text-primary"></i> Gestión de Citas (Activas)</h2>
+    <h2><i class="bi bi-calendar-month text-primary"></i> Gestión de Citas </h2>
     {% if perms.core.add_cita %}
         <a href="{% url 'agendar_cita' %}" class="btn btn-primary">
            <i class="bi bi-file-earmark-plus"></i> Agendar Cita
@@ -20,7 +20,7 @@
                    value="{{ request.GET.q }}">
 
             <input type="date" name="fecha" class="form-control w-auto"
-                   value="{{ request.GET.fecha }}"> <button type="submit" class="btn btn-primary">
+                   value="{{ request.GET.fecha }}"> <button type="submit" class="btn btn-outline-primary">
                 <i class="bi bi-search"></i>
             </button>
 
@@ -75,7 +75,7 @@
                                 </a>
 
                                 <a href="{% url 'editar_cita' cita.id %}" class="btn btn-sm btn-outline-secondary" title="Reprogramar Cita">
-                                    span class="d-none d-md-inline">Reprogramar</span>
+                                    <span class="d-none d-md-inline">Reprogramar</span>
                                     <i class="bi bi-arrow-clockwise"></i>
                                 </a>
                                 {% if perms.core.add_cita %}
