--- a/core/templates/core/lista_clientes.html
+++ b/core/templates/core/lista_clientes.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="d-flex justify-content-between align-items-center mb-4">
-    <h2> <i class="bi bi-people-fill text-dark"></i> Directorio de Clientes</h2>
+    <h2>  Directorio de Clientes <i class="bi bi-people-fill"></i> </h2>
     <a href="{% url 'crear_cliente' %}" class="btn btn-primary">
        <i class="bi bi-person-add"></i> Nuevo Cliente
     </a>
