--- a/core/templates/core/lista_gastos.html
+++ b/core/templates/core/lista_gastos.html
@@ -3,8 +3,8 @@
 
 {% block content %}
 <div class="d-flex justify-content-between align-items-center mb-4">
-    <h2> <i class="bi bi-graph-up text-primary"></i> Control de Gastos</h2>
-    <a href="{% url 'crear_gasto' %}" class="btn btn-danger">
+    <h2> <i class="bi bi-graph-down"></i> Control de Gastos</h2>
+    <a href="{% url 'crear_gasto' %}" class="btn-rosa-fuerte">
         <i class="bi bi-pen"></i> Registrar Gasto
     </a>
 </div>
@@ -27,11 +27,11 @@
                             <td class="fw-bold text-muted">{{ gasto.fecha|date:"d/m/Y" }}</td>
                             <td>{{ gasto.descripcion }}</td>
                             <td>
-                                <span class="badge bg-secondary text-light">
+                                <span class="badge bg-rosa-fuerte text-light">
                                     {{ gasto.categoria.nombre }}
                                 </span>
                             </td>
-                            <td class="text-end fw-bold text-danger">
+                            <td class="text-end fw-bold text-rosa-fuerte">
                                 - {{ gasto.monto|intcomma }} Gs.
                             </td>
                         </tr>
