--- a/core/templates/core/lista_profesional.html
+++ b/core/templates/core/lista_profesional.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="d-flex justify-content-between align-items-center mb-4">
-    <h2> <i class="bi bi-people-fill text-dark"></i> Directorio de Profesionales</h2>
+    <h2>  Directorio de Profesionales <i class="bi bi-people-fill"></i> </h2>
     {% if perms.core.add_profesional %}
         <a href="{% url 'crear_profesional' %}" class="btn btn-primary">
             <i class="bi bi-person-add"></i> Nuevo Profesional
