--- a/core/templates/core/lista_servicios.html
+++ b/core/templates/core/lista_servicios.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="d-flex justify-content-between align-items-center mb-3">
-        <h2>Catálogo de Servicios</h2>
+        <h2>Catálogo de Servicios <i class="bi bi-list-ol"></i> </h2>
         {% if perms.core.add_servicio %}
             <a href="{% url 'crear_servicio' %}" class="btn btn-primary">
                <i class="bi bi-patch-plus"></i> Nuevo Servicio
@@ -15,7 +15,7 @@
                 <input type="text" name="q" class="form-control"
                        placeholder="Buscar por nombre de servicio"
                        value="{{ request.GET.q }}">
-                    <button type="submit" class="btn btn-primary">
+                    <button type="submit" class="btn btn-outline-primary">
                         <i class="bi bi-search"></i>
                     </button>
 
