--- a/core/templates/core/reporte_caja.html
+++ b/core/templates/core/reporte_caja.html
@@ -76,8 +76,8 @@
 <div class="row justify-content-center mb-4">
     <div class="col-md-6">
         <div class="card border-warning shadow-lg">
-            <div class="card-header bg-warning text-dark fw-bold text-center">
-                 ARQUEO DE CAJA FÍSICA (BILLETES)
+            <div class="card-header bg-dark text-white fw-bold text-center">
+                 <i class="bi bi-cash-coin text- success"></i> <i class="bi bi-receipt"></i> ARQUEO DE CAJA FÍSICA
             </div>
             <div class="card-body">
                 <div class="d-flex justify-content-between border-bottom pb-2 mb-2">
@@ -94,7 +94,7 @@
                 </div>
 
                 <div class="d-flex justify-content-between pt-2">
-                    <h4 class="fw-bold">DINERO EN CAJÓN:</h4>
+                    <h4 class="fw-bold text-dark">Dinero en Caja:</h4>
                     <h3 class="fw-bold text-dark">{{ caja_fisica|intcomma }} Gs.</h3>
                 </div>
             </div>
@@ -142,7 +142,7 @@
 
 <div class="card shadow-sm border-danger">
     <div class="card-header bg-rosa-fuerte text-white">
-        <h5 class="mb-0"> <i class="bi bi-graph-up-arrow"></i> Detalle de Gastos del Periodo</h5>
+        <h5 class="mb-0"> <i class="bi bi-graph-down-arrow"></i> Detalle de Gastos del Periodo</h5>
     </div>
     <div class="card-body p-0">
         <div class="table-responsive">
