--- a/core/templates/registration/login.html
+++ b/core/templates/registration/login.html
@@ -5,7 +5,7 @@
     <div class="col-md-4">
         <div class="card shadow">
             <div class="card-header bg-primary text-white text-center">
-                <h4 class="mb-0">🔐 Iniciar Sesión</h4>
+                <h4 class="mb-0"> <i class="bi bi-person-lock"></i> Iniciar Sesión</h4>
             </div>
             <div class="card-body p-4">
                 <form method="post">
