--- a/core/templates/core/agendar_cita.html
+++ b/core/templates/core/agendar_cita.html
@@ -2,8 +2,13 @@
 {% load static %}
 
 {% block content %}
-<div class="row justify-content-center"> <div class="col-md-6"> <div class="card shadow-sm"> <div class="card-body p-4">
-                <h3 class="mb-4 text-center"> <i class="bi bi-calendar-day text-primary"></i> {{ titulo }}</h3>
+<div class="row justify-content-center">
+    <div class="col-md-6">
+        <div class="card shadow-sm">
+            <div class="card-header bg-primary text-white">
+                    <h3 class="mb-2 text-center"> <i class="bi bi-calendar-day"></i> {{ titulo }}</h3>
+                </div>
+            <div class="card-body p-4">
 
                 {% if form.errors %}
                     <div class="alert alert-danger small"> <ul class="mb-0 ps-3">
