--- a/core/templates/core/lista_citas.html
+++ b/core/templates/core/lista_citas.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="d-flex justify-content-between align-items-center mb-4">
-    <h2><i class="bi bi-calendar-month text-primary"></i> Gestión de Citas </h2>
+    <h2> Gestión de Citas <i class="bi bi-calendar-month text-primary"></i> </h2>
     {% if perms.core.add_cita %}
         <a href="{% url 'agendar_cita' %}" class="btn btn-primary">
            <i class="bi bi-file-earmark-plus"></i> Agendar Cita
@@ -66,24 +66,25 @@
                                     <span class="badge bg-warning text-dark">Pendiente</span>
                                 {% endif %}
                             </td>
-                            <td class="text-end">
+                            <td>
                                 <a href="https://wa.me/{{ cita.cliente.telefono|whatsapp_url }}?text={{ cita|whatsapp_mensaje }}"
                                    target="_blank"
                                    class="btn btn-sm btn-success"
                                    title="Enviar Recordatorio">
                                     <i class="bi bi-whatsapp"></i>
                                 </a>
-
-                                <a href="{% url 'editar_cita' cita.id %}" class="btn btn-sm btn-outline-secondary" title="Reprogramar Cita">
-                                    <span class="d-none d-md-inline">Reprogramar</span>
-                                    <i class="bi bi-arrow-clockwise"></i>
-                                </a>
-                                {% if perms.core.add_cita %}
-                                    <a href="{% url 'cancelar_cita' cita.id %}" class="btn btn-sm btn-outline-danger" title="Cancelar Cita">
-                                        <span class="d-none d-md-inline">Cancelar</span>
-                                        <i class="bi bi-x-octagon"></i>
+                                <div class="btn-group">
+                                    <a href="{% url 'editar_cita' cita.id %}" class="btn btn-sm btn-outline-secondary">
+                                        <span class="d-none d-md-inline">Modificar</span>
+                                        <i class="bi bi-pencil-square"></i>
                                     </a>
-                                {% endif %}
+                                    {% if perms.core.add_cita %}
+                                        <a href="{% url 'cancelar_cita' cita.id %}" class="btn btn-sm btn-outline-danger">
+                                            <span class="d-none d-md-inline">Cancelar</span>
+                                            <i class="bi bi-x-square"></i>
+                                        </a>
+                                    {% endif %}
+                                </div>
                             </td>
                         </tr>
                     {% empty %}
