--- a/core/templates/core/lista_citas.html
+++ b/core/templates/core/lista_citas.html
@@ -42,7 +42,7 @@
                         <th>Cliente</th>
                         <th>Servicio / Profesional</th>
                         <th>Estado</th>
-                        <th class="text-end">Acciones</th>
+                        <th>Acciones</th>
                     </tr>
                 </thead>
                 <tbody>
