--- a/core/templates/core/mis_comisiones.html
+++ b/core/templates/core/mis_comisiones.html
@@ -35,7 +35,7 @@
 
 <div class="row mb-4 text-center align-items-stretch">
     <div class="col-md-6 mb-2">
-        <div class="card shadow-sm border-secondary h-100">
+        <div class="card shadow-sm border-secondary h-80">
             <div class="card-header bg-secondary text-white fw-bold">MI PRODUCCIÓN</div>
             <div class="card-body d-flex flex-column justify-content-center">
                 <h2 class="fw-bold text-dark">{{ total_vendido|intcomma }} Gs.</h2>
@@ -45,7 +45,7 @@
     </div>
 
     <div class="col-md-6 mb-2">
-        <div class="card shadow border-success h-100">
+        <div class="card shadow border-success h-80">
             <div class="card-header bg-success text-white fw-bold">
                 MI GANANCIA ({{ profesional.porcentaje_comision }}%)
             </div>
@@ -57,14 +57,14 @@
     </div>
 </div>
 
-<div class="card shadow-sm">
-    <div class="card-header">
-        <h5 class="mb-0"> <i class="bi bi-journal-check text-info"></i>  Detalle de Servicios Realizados</h5>
+<div class="card shadow-sm border-0">
+    <div class="card-header bg-primary text-white">
+        <h5 class="mb-0 fs-6"> <i class="bi bi-journal-check"></i>  Detalle de Servicios Realizados</h5>
     </div>
     <div class="card-body p-0">
         <div class="table-responsive">
-            <table class="table table-striped mb-0">
-                <thead>
+            <table class="table table-hover align-middle mb-0">
+                <thead class="table-light">
                     <tr>
                         <th>Fecha</th>
                         <th>Hora</th>
