--- a/core/templates/core/reporte_caja.html
+++ b/core/templates/core/reporte_caja.html
@@ -141,12 +141,12 @@
 <br>
 
 <div class="card shadow-sm border-danger">
-    <div class="card-header bg-rosa-fuerte text-white">
+    <div class="card-header bg-primary text-white">
         <h5 class="mb-0"> <i class="bi bi-graph-down-arrow"></i> Detalle de Gastos del Periodo</h5>
     </div>
     <div class="card-body p-0">
         <div class="table-responsive">
-            <table class="table table-striped mb-0">
+            <table class="table table-hover align-middle mb-0">
                 <thead>
                     <tr>
                         <th>Fecha</th>
