--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -29,7 +29,7 @@
 
 
        <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
-            <div class="container">
+            <div class="container-fluid px-4">
                 <a class="navbar-brand" href="{% url 'home' %}">
                     <i class="bi bi-scissors"></i> BeautyManager
                 </a>
@@ -92,11 +92,13 @@
 
                     <div class="d-flex align-items-center ms-lg-3 mt-3 mt-lg-0">
                         {% if user.is_authenticated %}
-                            <span class="text-white-50 me-3 small">Hola, <strong>{{ user.username }}</strong></span>
+                            <span class="text-white-50 me-2 small d-none d-md-inline">
+                                {{ user.username|title }}
+                            </span>
                             <form action="{% url 'logout' %}" method="post">
                                 {% csrf_token %}
-                                <button type="submit" class="btn btn-outline-light btn-sm">
-                                    <i class="bi bi-box-arrow-right"></i> Cerrar Sesión
+                                <button type="submit" class="btn btn-outline-light btn-sm px-3">
+                                    <i class="bi bi-box-arrow-right"></i> Salir
                                 </button>
                             </form>
                         {% endif %}
