--- a/core/templates/core/finalizar_cita.html
+++ b/core/templates/core/finalizar_cita.html
@@ -40,6 +40,11 @@
                         <label class="form-label fw-bold text-center d-block">Monto a Cobrar (Gs.)</label>
                         {{ form.monto_cobrado}}
                     </div>
+                    <div class="mb-3 text-start">
+                        <label class="form-label small fw-bold">Detalles / Adicionales:</label>
+                        <textarea name="notas_adicionales" class="form-control" rows="2"
+                                  placeholder="Ej: Stickers, Diseño 3D, Descuento por amiga..."></textarea>
+                    </div>
 
                     <div class="d-grid gap-2">
                         <button type="submit" class="btn btn-success btn-lg">
