--- a/core/templates/core/reporte_caja.html
+++ b/core/templates/core/reporte_caja.html
@@ -122,7 +122,15 @@
                         <tr>
                             <td class="fw-bold text-muted">{{ cita.fecha|date:"d/m" }}</td> <td>{{ cita.hora }}</td>
                             <td>{{ cita.cliente.nombre }} {{ cita.cliente.apellido }}</td>
-                            <td>{{ cita.servicio.nombre }}</td>
+                            <td>
+                                <strong>{{ cita.servicio.nombre }}</strong>
+                                {% if cita.notas_adicionales %}
+                                    <br>
+                                    <small class="text-muted fst-italic" style="font-size: 0.85em;">
+                                        <i class="bi bi-tag-fill"></i> {{ cita.notas_adicionales }}
+                                    </small>
+                                {% endif %}
+                            </td>
                             <td>{{ cita.profesional.nombre }}</td>
                             <td class="text-end fw-bold">{{ cita.monto_cobrado|intcomma }} Gs.</td>
                         </tr>
